# CG

./: .gitignore  CMakeLists.txt  build.sh  clean.sh
engine/: CMakeLists.txt  Point.cpp  Point.h  engine.cpp  model.cpp  model.h  parser.cpp  parser.h  point.cpp  point.h  scene.cpp  scene.h  tinyxml2.cpp  tinyxml2.h
examples/phase1/: box410.3d  box410.xml  cone45.3d  cone45.xml  plane5.3d  plane5.xml  sphere100.3d  sphere100.xml
examples/phase2/: saturnRing1.3d  saturnRing2.3d  saturnRing3.3d  smallPlanets.3d  ss.xml  trajectories.3d
examples/phase3/: bigPlanets.3d  ss.xml
examples/phase4/: AllTypesTest.xml  DirectionalLightTest.xml  PointLightTest.xml  SpotLightText.xml  TextureTestBox.xml  box.3d  boxLightTest.xml  brickConeLightText.xml  sphere.3d  teapotLight.xml
examples/phase4/solarSystem/: bigPlanets.3d  saturnRing1.3d  saturnRing2.3d  saturnRing3.3d  smallPlanets.3d  ss.xml  sun.3d
generator/: Box.cpp  Box.h  CMakeLists.txt  box.cpp  box.h  cone.cpp  cone.h  generator.cpp  main.cpp  outputAux.cpp  outputAux.h  plane.cpp  plane.h  sphere.cpp
src/: lint.sh
src/engine/: CMakeLists.txt  catmull.cpp  directionalLight.cpp  engine.cpp  group.cpp  light.cpp  material.cpp  matrix.cpp  model.cpp  parser.cpp  point.cpp  pointLight.cpp  rotation.cpp  scale.cpp  scene.cpp  spotLight.cpp  texture.cpp  tinyxml2.cpp  transformation.cpp  translation.cpp  triangle.cpp
src/engine/headers/: catmull.h  directionalLight.h  group.h  light.h  material.h  matrix.h  model.h  parser.h  point.h  pointLight.h  rotation.h  scale.h  scene.h  spotLight.h  texture.h  tinyxml2.h  transformation.h  translation.h  triangle.h
src/generator/: CMakeLists.txt  annulus.cpp  bezierPatch.cpp  box.cpp  cone.cpp  generator.cpp  normal.cpp  outputAux.cpp  plane.cpp  sphere.cpp
src/generator/headers/: annulus.h  bezierPatch.h  box.h  cone.h  normal.h  outputAux.h  plane.h  sphere.h
src/generator/helpers/: genXml.sh
src/lib/: point.cpp
src/lib/headers/: matrix.h  point.h
src/solarGenerator/: CMakeLists.txt  solarSystemGen.cpp
